# test-antigravity

./: .agentignore  .gitignore  README.md  antigravity.yaml  main.py  pyproject.toml
.agent/: README.md  permissions.yaml
.agent/rules/: global.md  image-guide.md  project-rules.md  security.md  solid-coding-guide.md  user-stories-extraction-guide.md
.agent/tools/: user_db_tool.py
.agent/workflows/: generate-tests.md
.gemini/: GEMINI.md
.gemini/agents/: database-reviewer.md  go-build-resolver.md  go-reviewer.md
examples/ExStruct/: README.md  pyproject.toml  requirements.txt
examples/ExStruct/samples/: sample.xlsx
examples/ExStruct/src/exstruct_server/: server.py
examples/ExStruct/tests/: create_sample.py  test_server.py
examples/dspy/: main.ipynb
examples/gemini-figma-workflow/: README.md  package.json
examples/lms-to-graphql/: README.md  package-lock.json  package.json
examples/lms-to-prisma/: .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
examples/logical-model-schema/: README.md  logical_model_schema_separated.json  prompt_generate_logical_model.md  prompt_generate_logical_model_separated.md  prompt_generate_logical_model_with_context.md
examples/manifest/: AGENTS.md
examples/multi-agent-zenn/: .env.example  README.md  agents.py  main.py
examples/open-notebook-setup/: .env.example  README.md  docker-compose.yml
examples/programming-practice/: README.md  class-diagram.md  codebase.ts  directory-structure.md
skills/agent-browser/: SKILL.md
skills/postgresql-development/: SKILL.md
(+61 files in other folders)
