[project]
name = "exstruct-mcp-server"
version = "0.1.0"
description = "MCP server for reading Excel files using ExStruct"
requires-python = ">=3.11"
dependencies = [
    "mcp",
    "exstruct",
]

[[project.authors]]
name = "Surpris"
email = "surpris@example.com"

[tool.setuptools.packages.find]
where = ["src"]
